--- a/css/desktop.css
+++ b/css/desktop.css
@@ -46,6 +46,7 @@
 
   .music-logo {
     width: 120px;
+    margin-left: 100px;
     display: block;
   }
 
@@ -94,25 +95,40 @@
     color: #ec5242;
     font-size: 2rem;
     margin-top: 2.5em;
+    margin-left: 120px;
   }
 
-  .content h1 {
+  .cover {
+    margin-left: 20px;
+  }
+
+  .content {
     color: #ec5242;
-    font-size: 80px;
+    font-weight: bolder;
+    margin-left: 120px;
+    font-size: 60px;
+  }
+
+  .lorem {
+    width: 700px;
+    margin-left: 19em;
+    background-color: white;
     font-weight: bold;
   }
 
   .lorem-border {
     margin-top: 1.5em;
     margin-right: 10em;
-    background-color: rgb(231, 226, 226);
     border: 3px solid rgb(236, 236, 236);
     font-size: 1.2em;
     padding: 20px;
+    width: 700px;
+    margin-left: 120px;
   }
 
   .concert-time {
     margin-top: 1.5em;
+    margin-left: 120px;
     font-size: 2rem;
     color: #272a31;
     font-weight: bolder;
@@ -123,10 +139,18 @@
     font-size: 1.5rem;
     color: #272a31;
     margin-bottom: 2em;
+    margin-left: 120px;
   }
 
   .to-move {
-    margin-left: 20px;
+    font-weight: bold;
+    margin-bottom: 30px;
+  }
+
+  .to-center {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 20px;
   }
 
   .pattern-bg {
@@ -292,26 +316,17 @@
 .blue {
   color: #ec5242;
   text-align: center;
-  font-size: 22px;
   padding-top: 100px;
-}
-
-.lorem {
-  margin-top: 2em;
-  margin-left: 7em;
-  margin-right: 7em;
-  background-color: rgb(231, 226, 226);
-  border: 3px solid rgb(236, 236, 236);
-  font-size: 1em;
-  padding: 20px;
+  font-weight: bolder;
+  font-size: 40px;
 }
 
 .question {
   font-size: 20px;
   text-align: center;
-  padding-top: 100px;
-  padding-bottom: 20px;
-  color: #ec5242;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  color: black;
   font-weight: bold;
 }
 
@@ -335,9 +350,8 @@
 }
 
 .ipsum {
-  padding: 20px 20px;
-  font-size: 18px;
-  padding-top: 40px;
+  text-align: center;
+  font-weight: bold;
 }
 
 .align {
