--- a/css/style.css
+++ b/css/style.css
@@ -108,9 +108,20 @@
     margin-top: 2.5em;
   }
 
-  .content h1 {
+  .content {
     color: #ec5242;
-    font-size: 50px;
+    font-size: 30px;
+    font-weight: bold;
+  }
+
+  .lorem {
+    width: 300px;
+    margin-top: 2em;
+    margin-left: 5em;
+    background-color: white;
+    border: 3px solid rgb(236, 236, 236);
+    font-size: 1em;
+    padding: 25px;
     font-weight: bold;
   }
 
@@ -271,7 +282,7 @@
   .player-header {
     font-family: var(--font-roboto);
     color: #1d1d1d;
-    font-size: 1rem;
+    font-size: 1em;
     font-weight: bold;
     margin-left: 10px;
     display: flex;
@@ -339,18 +350,8 @@
   .blue {
     color: #06a1f4;
     text-align: center;
-    font-size: 22px;
+    font-size: 20px;
     padding-top: 100px;
-  }
-
-  .lorem {
-    margin-top: 2em;
-    margin-left: 7em;
-    margin-right: 7em;
-    background-color: rgb(231, 226, 226);
-    border: 3px solid rgb(236, 236, 236);
-    font-size: 1em;
-    padding: 20px;
   }
 
   .question {
