--- a/css/desktop.css
+++ b/css/desktop.css
@@ -28,7 +28,7 @@
     list-style-type: none;
     display: flex;
     align-items: center;
-    margin-left: 60em;
+    margin-left: 96em;
   }
 
   .for-icon-nav li {
@@ -69,7 +69,7 @@
     list-style-type: none;
     display: flex;
     align-items: center;
-    margin-left: 22em;
+    margin-left: 55em;
   }
 
   .for-desk-nav li {
@@ -93,43 +93,45 @@
 
   .first-content {
     color: #ec5242;
-    font-size: 2rem;
+    font-size: 4rem;
     margin-top: 2.5em;
-    margin-left: 120px;
+    margin-left: 100px;
+    font-weight: bolder;
   }
 
   .cover {
     margin-left: 20px;
   }
 
-  .content {
+  h1 {
     color: #ec5242;
     font-weight: bolder;
-    margin-left: 120px;
-    font-size: 60px;
+    margin-left: 100px;
+    font-size: 120px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 
   .lorem {
     width: 700px;
-    margin-left: 19em;
+    margin-left: 40rem;
     background-color: white;
     font-weight: bold;
+    margin-bottom: 60px;
   }
 
   .lorem-border {
     margin-top: 1.5em;
-    margin-right: 10em;
     border: 3px solid rgb(236, 236, 236);
     font-size: 1.2em;
     padding: 20px;
     width: 700px;
-    margin-left: 120px;
+    margin-left: 100px;
   }
 
   .concert-time {
     margin-top: 1.5em;
-    margin-left: 120px;
-    font-size: 2rem;
+    margin-left: 100px;
+    font-size: 3rem;
     color: #272a31;
     font-weight: bolder;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -138,8 +140,8 @@
   .concert-time-sec {
     font-size: 1.5rem;
     color: #272a31;
-    margin-bottom: 2em;
-    margin-left: 120px;
+    margin-bottom: 4em;
+    margin-left: 100px;
   }
 
   .to-move {
@@ -313,12 +315,11 @@
   background-image: url(/images/main_big.png);
 }
 
-.blue {
+.blue h2 {
   color: #ec5242;
   text-align: center;
-  padding-top: 100px;
-  font-weight: bolder;
-  font-size: 40px;
+  font-size: 60px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .question {
@@ -368,7 +369,7 @@
 }
 
 .for-2023 {
-  margin-left: 15%;
+  margin-left: 25%;
 }
 
 .final {
@@ -384,6 +385,7 @@
 
 .for-footer {
   display: flex;
+  padding-left: 100px;
 }
 
 .for-footer li {
@@ -404,11 +406,13 @@
 
 .move-display {
   padding-top: 60px;
+  font-weight: bold;
 }
 
 .for-footer-sec {
   display: flex;
   background-color: #272930;
+  padding-left: 300px;
 }
 
 .for-footer-sec li {
@@ -421,6 +425,12 @@
 
 .footer-music {
   width: 150px;
+}
+
+.for-color {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 @media screen and (min-width: 769px) {
