--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,9 @@
   }
 
   #for-hamburger {
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    font-weight: bolder;
     display: none;
     background-image: url(/images/main_big.png);
     backdrop-filter: blur(5px);
@@ -72,8 +75,7 @@
 
   .for-style li a {
     color: #ec5242;
-    font-size: 40px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 50px;
   }
 
   .for-style li a:hover {
@@ -108,9 +110,9 @@
     margin-top: 2.5em;
   }
 
-  .content {
+  .content h1 {
     color: #ec5242;
-    font-size: 50px;
+    font-size: 4em;
     font-weight: bolder;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
@@ -118,18 +120,17 @@
   .lorem {
     width: 300px;
     margin-top: 2em;
-    margin-left: 13em;
+    margin-left: 6em;
     background-color: white;
     border: 3px solid rgb(236, 236, 236);
     font-size: 1em;
-    padding: 25px;
+    padding: 20px;
     font-weight: bold;
   }
 
   .lorem-border {
-    width: 500px;
-    margin-top: 1.5em;
-    margin-top: 100px;
+    width: 400px;
+    margin-top: 20px;
     background-color: rgb(231, 226, 226);
     border: 3px solid rgb(236, 236, 236);
     font-size: 1em;
@@ -179,7 +180,7 @@
     font-weight: bolder;
     color: white;
     margin-top: 40px;
-    margin-left: 26%;
+    margin-left: 18%;
     cursor: pointer;
   }
 
@@ -189,11 +190,10 @@
     border: 2px solid rgb(171, 167, 167);
     font-weight: bolder;
     color: rgb(0, 0, 0);
-    margin: 0 10px;
     margin-bottom: 30px;
     text-align: center;
     cursor: pointer;
-    margin-left: 20%;
+    margin-left: 4%;
   }
 
   .down-errow {
@@ -434,7 +434,7 @@
   }
 
   .photo-sec {
-    margin-left: 130px;
+    margin-left: 17px;
     margin-top: 10px;
   }
 
