--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
   }
 
   .container-two {
-    background-image: url(/images/main_big.png);
+    background-image: url(../images/main_big.png);
   }
 
   .lower-nav {
@@ -350,7 +350,7 @@
 
   /* aboutpage */
   .dolphin {
-    background-image: url(/images/main_big.png);
+    background-image: url(./images/main_big.png);
   }
 
   .blue {
