--- a/css/desktop.css
+++ b/css/desktop.css
@@ -55,7 +55,7 @@
   }
 
   .container-two {
-    background-image: url(/images/main_big.png);
+    background-image: url(../images/main_big.png);
   }
 
   .lower-nav {
@@ -324,7 +324,7 @@
 }
 
 .dolphin {
-  background-image: url(/images/main_big.png);
+  background-image: url(../images/main_big.png);
 }
 
 .blue h2 {
