--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@
 
   /* aboutpage */
   .dolphin {
-    background-image: url(./images/main_big.png);
+    background-image: url(../images/main_big.png);
   }
 
   .blue {
