--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@
   }
 
   .pattern-bg {
-    background-image: url(/images/card2-patternn.png);
+    background-image: url(../images/card2-patternn.png);
     background-color: #272930;
     text-align: center;
     padding: 8%;
