--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,6 @@
     text-decoration: none;
   }
 
-  body {
-    overflow-x: hidden;
-  }
-
   .ham-burger {
     width: 50px;
     height: 30px;
@@ -255,7 +251,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 50px auto;
+    margin: 50px -100px;
   }
 
   .player-img {
