--- a/css/desktop.css
+++ b/css/desktop.css
@@ -113,10 +113,15 @@
 
   .lorem {
     width: 700px;
-    margin-left: 20rem;
+    margin-left: 25%;
     background-color: white;
     font-weight: bold;
     margin-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
   .lorem-border {
@@ -222,7 +227,7 @@
 
   .player-img {
     width: 130px;
-    margin-left: 200px;
+    margin-left: 170px;
     box-shadow: -10px -10px 5px -3px rgba(0, 0, 0, 0.28);
   }
 
