--- a/css/style.css
+++ b/css/style.css
@@ -437,11 +437,19 @@
   }
 
   .photo-sec {
-    margin: 1% 3%;
+    margin: 2% 10%;
     margin-top: 10px;
   }
 
   .photo-sec li {
     padding-bottom: 20px;
+  }
+
+  .for-summer img {
+    width: 20em;
+  }
+
+  .layout .for-cold img {
+    width: 20em;
   }
 }
